# Ml_from_Scratch

./: CMakeLists.txt
demo/: CMakeLists.txt
doc/: CMakeLists.txt
include/core/: Estimator.h  Predictor.h  estimator_concept.h  layer_concept.h  loss_concept.h  optimizer_concept.h  predictor_concept.h
include/layers/: DenseLayer.h  Layer.h
include/losses/: CrossEntropyLoss.h  LossFunction.h  cross_entropy_loss.h  hinge_loss.h  huber_loss.h  mean_squared_error.h
include/losses/regularization/: elastic_net.h  elastic_net.tpp
include/models/: LinearRegression.h  LogisticRegression.h  NeuralNetwork.h  linear_regression.h  linear_regression.tpp  logistic_regression.h  logistic_regression.tpp
include/models/linear_models/: linear_regression.h  linear_regression.tpp  logistic_regression.h  logistic_regression.tpp
include/models/neural_networks/layers/: dense_layer.h
include/optimizers/: Optimizer.h  adam.h  gradient_descent.h  sgd.h
include/utils/: Matrix.h
src/: CMakeLists.txt
src/losses/: CrossEntropyLoss.cpp  HuberLoss.cpp  cross_entropy_loss.cpp  hinge_loss.cpp  huber_loss.cpp  mean_squared_error.cpp
src/losses/regularization/: elastic_net.cpp
src/models/: LinearRegression.cpp  linear_regression.cpp  logistic_regression.cpp  neural_network.cpp
src/optimizers/: GradientDescent.cpp  adam.cpp  gradient_descent.cpp  sgd.cpp
src/utils/: Matrix.cpp
test/: CMakeLists.txt  test_linear_regression.cpp  test_logistic_regression.cpp
